# feb-5-test-secrets-code-scanning-cloned-ai-agents

./: README.md  test_dataset_scan.csv
ai-agents-develop/: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.example  CLAUDE.md  Dockerfile  Makefile  README.md  config.py  google_auth_token_generator.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  start_server.sh
ai-agents-develop/.github/workflows/: pull_request_labels.yml  run-local-test .yml  run-test.yml  trivy.yml
ai-agents-develop/app/: __init__.py
ai-agents-develop/app/api/: __init__.py  main.py
ai-agents-develop/app/core/: prototype_loader.py  registry.py
ai-agents-develop/app/exceptions/: control_exceptions.py
ai-agents-develop/app/utils/: file_storage_manager.py  folder_operation.py  logfire.py  worker.py
ai-agents-develop/mcp_server/: README.md
ai-agents-develop/mcp_server/gmail/: example_agent_call.py  example_tool_call.py  server.py
ai-agents-develop/mcp_server/google_drive/: example_agent_call.py  example_tool_call.py  server.py
ai-agents-develop/mcp_server/google_spreadsheet/: example_agent_call.py  example_tool_call.py  server.py
ai-agents-develop/mcp_server/utils/: google_token_refresh.py
ai-agents-develop/scripts/: README.md  create_auth_session.py  create_framework.py  generate_email_request.py  response_to_markdown.py  test_audit_analysis_agent.py  test_auth_session.py  test_download_failed_server.py  test_image_interpreter.py
ai-agents-develop/scripts/credential_configs/: test_credential_example.yaml
ai-agents-develop/scripts/framework_configs/: .gitkeep  ac9.yaml  archer_file_upload_test.yaml  ghco_sox_testing.yaml  gmail_test.yaml  longterm_memory_testing.yaml  sample_framework.yaml  sample_subagent.yaml  test_ghco.yaml
ai-agents-develop/test_suite/: __main__.py  credential.py.example
ai-agents-develop/test_suite/GHCO_connected_agents/: __init__.py  config.py  settings.py
ai-agents-develop/test_suite/GHCO_end_to_end/: __init__.py  config.py  settings.py
ai-agents-develop/test_suite/GHCO_part1/: __init__.py  config.py  settings.py
ai-agents-develop/test_suite/browser_audit_chain/: config.py  settings.py
ai-agents-develop/test_suite/ghco_auditor/: config.py  (+1 more)
ai-agents-develop/test_suite_v2/: Home.py  __init__.py
chat-with-docs-develop/: .env.example  .gitignore  README.md  config.py  pyproject.toml
chat-with-docs-develop/.streamlit/: config.toml
chat-with-docs-develop/app/: main.py
(+309 files in other folders)
