[project]
name = "chat-with-docs"
version = "0.1.0"
description = "Sample chatbot and agentes for demos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "httpx[http2]",
    "pydantic-ai[logfire]==0.7.2",
    "pydantic-ai-slim[duckduckgo]",
    "openai",
    "anthropic",
    "pydantic",
    "ibm-watson>=8.1.0",
    "ibm-watsonx-ai>=1.4.11",
    "logfire[aiohttp-client,httpx,requests]",
    "google-generativeai",
    "langchain-anthropic",
    "certifi==2024.8.30",
    "graphviz",
    "nest-asyncio",
    "beautifulsoup4",
]
